--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "babelfishprotocol",
+  "name": "sovryn-dollar",
   "version": "1.0.0",
-  "description": "babelfish Contracts",
+  "description": "Sovryn Dollar Contracts",
   "license": "AGPL-3.0-or-later",
   "files": [
     "/contracts/**/*.sol",
