add meta asset token deployment script

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "deploy-governance:rskTestnet": "yarn hardhat deploy --network rskTestnet --reset --tags governance",
     "deploy-mynt-token": "yarn hardhat deploy --network development --reset --tags myntToken",
     "deploy-fish-token": "yarn hardhat deploy --network development --reset --tags fishToken",
+    "deploy-meta-asset-token": "yarn hardhat deploy --network development --reset --tags metaAssetToken",
     "lint": "yarn run lint-ts; yarn run lint-sol",
     "lint-ts": "yarn eslint ./test --ext .ts,.js --fix --quiet",
     "lint-sol": "solium -d contracts/ --fix ",
@@ -75,7 +76,7 @@
     "ethers": "^5.7.1",
     "ethlint": "^1.2.5",
     "hardhat-contract-sizer": "^2.0.3",
-    "hardhat-deploy": "^0.8.11",
+    "hardhat-deploy": "^0.11.15",
     "hardhat-docgen": "^1.1.1",
     "humanize-duration": "^3.21.0",
     "mocha": "^7.0.1",
