fix: deployment script

--- a/package.json
+++ b/package.json
@@ -45,27 +45,28 @@
   },
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.1.1",
+    "@nomiclabs/hardhat-truffle5": "^2.0.7",
     "@nomiclabs/hardhat-waffle": "^2.0.3",
     "@nomiclabs/hardhat-web3": "^2.0.0",
     "@openzeppelin/contracts": "^4.8.0",
     "@openzeppelin/contracts-upgradeable": "^4.8.0",
     "@openzeppelin/hardhat-upgrades": "^1.21.0",
-    "@openzeppelin/test-helpers": "0.5.11",
+    "@openzeppelin/test-helpers": "^0.5.16",
     "@openzeppelin/upgrades": "2.7.2",
-    "@typechain/truffle-v5": "^2.0.0",
-    "@types/bn.js": "^4.11.6",
-    "@types/chai": "^4.2.2",
-    "@types/lodash": "^4.14.138",
-    "@types/mocha": "^5.2.7",
-    "@types/node": "^12.7.5",
-    "@typescript-eslint/eslint-plugin": "^2.21.0",
-    "@typescript-eslint/eslint-plugin-tslint": "^2.21.0",
-    "@typescript-eslint/parser": "^2.21.0",
-    "chai": "^4.2.0",
-    "chai-bn": "^0.2.0",
-    "chai-core": "^5.0.0-alpha.0",
+    "@typechain/truffle-v5": "^8.0.2",
+    "@types/bn.js": "^5.1.1",
+    "@types/chai": "^4.3.4",
+    "@types/lodash": "^4.14.190",
+    "@types/mocha": "^10.0.0",
+    "@types/node": "^18.11.9",
+    "@typescript-eslint/eslint-plugin": "^5.44.0",
+    "@typescript-eslint/eslint-plugin-tslint": "^5.44.0",
+    "@typescript-eslint/parser": "^5.44.0",
+    "chai": "^4.3.7",
+    "chai-bn": "^0.3.1",
+    "chai-core": "^5.0.0-alpha.2",
     "chalk": "^3.0.0",
-    "eslint": "^6.8.0",
+    "eslint": "^8.28.0",
     "eslint-config-airbnb-typescript": "^7.0.0",
     "eslint-config-prettier": "^6.10.0",
     "eslint-import-resolver-alias": "^1.1.2",
@@ -81,29 +82,27 @@
     "hardhat-deploy": "^0.11.15",
     "hardhat-docgen": "^1.1.1",
     "humanize-duration": "^3.21.0",
-    "mocha": "^7.0.1",
+    "mocha": "^10.1.0",
     "parse-duration": "^0.1.2",
     "prettier": "^1.18.2",
     "solc": "0.5.16",
-    "typechain": "^4.0.0",
+    "typechain": "^8.1.1",
     "types-ethereumjs-util": "^0.0.8",
-    "typescript": "^3.6.3",
-    "web3": "^1.2.6",
-    "web3-utils": "1.2.6"
+    "typescript": "^4.9.3",
+    "web3": "^1.8.1"
   },
   "dependencies": {
-    "@nomiclabs/hardhat-truffle5": "^2.0.0",
     "@tenderly/hardhat-tenderly": "^1.0.3",
+    "@typechain/hardhat": "^6.1.4",
     "dotenv": "^16.0.3",
-    "hardhat": "^2.0.3",
+    "hardhat": "^2.12.2",
     "hardhat-gas-reporter": "^1.0.1",
-    "hardhat-typechain": "^0.3.3",
     "node-logs": "^1.1.0",
     "sol-merger": "^3.0.1",
     "solidity-coverage": "^0.7.12",
     "ts-generator": "^0.1.1",
-    "ts-node": "^8.4.1",
-    "tsconfig-paths": "^3.9.0"
+    "ts-node": "^10.9.1",
+    "tsconfig-paths": "^4.1.0"
   },
   "_moduleAliases": {
     "@utils": "transpiled/test-utils"
