--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "deploy-meta-asset-token": "yarn hardhat deploy --network development --reset --tags metaAssetToken",
     "lint": "yarn run lint-ts; yarn run lint-sol",
     "lint-ts": "yarn eslint ./test --ext .ts,.js --fix --quiet",
-    "lint-sol": "solium -d contracts/ --fix ",
+    "lint-sol": "solhint contracts/{*,**/*,**/**/*,**/**/**/*,**/**/**/**/*}.sol",
     "coverage": "node --max_old_space_size=6144 node_modules/.bin/hardhat coverage --temp 'build/contracts' --testfiles 'test/[^e2e]*/*.ts' --show-stack-traces",
     "test": "node --max_old_space_size=4096 node_modules/.bin/hardhat test;",
     "test-file": "yarn hardhat test",
@@ -34,7 +34,8 @@
     "compile": "yarn hardhat compile --force",
     "init": "yarn install && TS_NODE_TRANSPILE_ONLY=1 yarn hardhat compile --force",
     "contract-sizes": "yarn hardhat size-contracts",
-    "prettify": "prettier --write test/*.ts test/**/*.ts types/generated/*.ts types/*.ts artifacts/*.ts",
+    "prettify": "prettier --write test/**/*.ts types/generated/*.ts types/**/*.ts contracts/**/*.sol",
+    "prettier-check": "prettier --check .",
     "flatten": "sol-merger \"./contracts/[^fish]**/*.sol\" ./_flat",
     "prepublishOnly": "yarn run compile",
     "docgen": "yarn hardhat compile --force && yarn run hardhat docgen"
@@ -45,6 +46,7 @@
   },
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.1.1",
+    "@nomiclabs/hardhat-solhint": "^2.0.1",
     "@nomiclabs/hardhat-truffle5": "^2.0.7",
     "@nomiclabs/hardhat-waffle": "^2.0.3",
     "@nomiclabs/hardhat-web3": "^2.0.0",
@@ -84,7 +86,8 @@
     "humanize-duration": "^3.21.0",
     "mocha": "^10.1.0",
     "parse-duration": "^0.1.2",
-    "prettier": "^1.18.2",
+    "prettier": "^2.8.0",
+    "prettier-plugin-solidity": "^1.0.0",
     "solc": "0.5.16",
     "typechain": "^8.1.1",
     "types-ethereumjs-util": "^0.0.8",
