--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "url": "git+https://github.com/mstable/mstable-contracts.git"
   },
   "devDependencies": {
-    "@nomiclabs/hardhat-ethers": "^2.1.1",
+    "@nomiclabs/hardhat-ethers": "npm:hardhat-deploy-ethers",
     "@nomiclabs/hardhat-solhint": "^2.0.1",
     "@nomiclabs/hardhat-truffle5": "^2.0.7",
     "@nomiclabs/hardhat-waffle": "^2.0.3",
@@ -55,6 +55,7 @@
     "@openzeppelin/hardhat-upgrades": "^1.21.0",
     "@openzeppelin/test-helpers": "^0.5.16",
     "@openzeppelin/upgrades": "2.7.2",
+    "@tenderly/hardhat-tenderly": "^1.3.2",
     "@typechain/truffle-v5": "^8.0.2",
     "@types/bn.js": "^5.1.1",
     "@types/chai": "^4.3.4",
@@ -78,8 +79,9 @@
     "eth-sig-util": "^3.0.1",
     "ethereumjs-util": "^7.1.5",
     "ethereumjs-wallet": "^1.0.2",
-    "ethers": "^5.7.1",
+    "ethers": "^5.7.2",
     "ethlint": "^1.2.5",
+    "hardhat": "^2.12.3",
     "hardhat-contract-sizer": "^2.0.3",
     "hardhat-deploy": "^0.11.15",
     "hardhat-docgen": "^1.1.1",
@@ -95,10 +97,8 @@
     "web3": "^1.8.1"
   },
   "dependencies": {
-    "@tenderly/hardhat-tenderly": "^1.0.3",
     "@typechain/hardhat": "^6.1.4",
     "dotenv": "^16.0.3",
-    "hardhat": "^2.12.2",
     "hardhat-gas-reporter": "^1.0.1",
     "node-logs": "^1.1.0",
     "sol-merger": "^3.0.1",
