--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,9 @@
     "baseUrl": ".",
     "rootDir": ".",
     "paths": {
-      "@utils/*": ["test-utils/*"],
+      "@utils/*": [
+        "test-utils/*"
+      ],
     },
     "allowJs": true,
     "target": "es2018",
@@ -30,7 +32,11 @@
     "./test/**/*.ts",
     "./test-utils/*.ts",
     "./test-utils/**/*.ts",
-    "./migrations"
+    "./migrations",
+    "./deploy",
+    ".eslintrc.js"
   ],
-  "files": ["./hardhat.config.ts"]
+  "files": [
+    "./hardhat.config.ts"
+  ]
 }
