--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@openzeppelin/test-helpers": "^0.5.16",
     "@openzeppelin/upgrades": "2.7.2",
     "@tenderly/hardhat-tenderly": "^1.3.2",
+    "@typechain/ethers-v5": "^10.2.0",
     "@typechain/truffle-v5": "^8.0.2",
     "@types/bn.js": "^5.1.1",
     "@types/chai": "^4.3.4",
