--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,12 @@
     "outDir": "./transpiled/",
     "sourceMap": true,
     "noImplicitAny": false,
-    // "lib": ["dom", "es2015", "es2016", "es2017"],
+    "lib": [
+      "dom",
+      "es2015",
+      "es2016",
+      "es2017"
+    ],
     "module": "commonjs",
     "baseUrl": ".",
     "rootDir": ".",
