--- a/package.json
+++ b/package.json
@@ -91,7 +91,7 @@
     "parse-duration": "^0.1.2",
     "prettier": "^2.8.0",
     "prettier-plugin-solidity": "^1.0.0",
-    "solc": "0.5.16",
+    "solc": "^0.8.17",
     "typechain": "^8.1.1",
     "types-ethereumjs-util": "^0.0.8",
     "typescript": "^4.9.3",
