--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "url": "git+https://github.com/mstable/mstable-contracts.git"
   },
   "devDependencies": {
+    "@defi-wonderland/smock": "^2.3.4",
     "@nomiclabs/hardhat-ethers": "npm:hardhat-deploy-ethers",
     "@nomiclabs/hardhat-solhint": "^2.0.1",
     "@nomiclabs/hardhat-truffle5": "^2.0.7",
