--- a/package.json
+++ b/package.json
@@ -45,7 +45,13 @@
   },
   "devDependencies": {
     "@defi-wonderland/smock": "^2.3.4",
+    "@ethersproject/abi": "^5.7.0",
+    "@ethersproject/providers": "^5.7.2",
+    "@nomicfoundation/hardhat-chai-matchers": "^1.0.5",
+    "@nomicfoundation/hardhat-network-helpers": "^1.0.7",
+    "@nomicfoundation/hardhat-toolbox": "^2.0.0",
     "@nomiclabs/hardhat-ethers": "npm:hardhat-deploy-ethers",
+    "@nomiclabs/hardhat-etherscan": "^3.1.3",
     "@nomiclabs/hardhat-solhint": "^2.0.1",
     "@nomiclabs/hardhat-truffle5": "^2.0.7",
     "@nomiclabs/hardhat-waffle": "^2.0.3",
@@ -98,12 +104,12 @@
     "web3": "^1.8.1"
   },
   "dependencies": {
-    "@typechain/hardhat": "^6.1.4",
+    "@typechain/hardhat": "^6.1.5",
     "dotenv": "^16.0.3",
-    "hardhat-gas-reporter": "^1.0.1",
+    "hardhat-gas-reporter": "^1.0.9",
     "node-logs": "^1.1.0",
     "sol-merger": "^3.0.1",
-    "solidity-coverage": "^0.7.12",
+    "solidity-coverage": "^0.8.2",
     "ts-generator": "^0.1.1",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.1.0"
