--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,11 @@
 {
   "compilerOptions": {
+    "target": "es2020",
+    "module": "commonjs",
+    "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,
+    "strict": true,
+    "skipLibCheck": true,
     "outDir": "./transpiled/",
     "sourceMap": true,
     "noImplicitAny": false,
@@ -9,7 +15,6 @@
       "es2016",
       "es2017"
     ],
-    "module": "commonjs",
     "baseUrl": ".",
     "rootDir": ".",
     "paths": {
@@ -18,13 +23,10 @@
       ],
     },
     "allowJs": true,
-    "target": "es2018",
-    "skipLibCheck": true,
     "typeRoots": [
       "node_modules/@0x/typescript-typings/types",
       "node_modules/@types"
     ],
-    "esModuleInterop": true
   },
   "include": [
     "./types/*.ts",
