--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.18.3",
+    "eth-permit": "^0.2.3",
     "eth-sig-util": "^3.0.1",
     "ethereumjs-util": "^7.1.5",
     "ethereumjs-wallet": "^1.0.2",
