--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "files": [
     "/contracts/**/*.sol",
     "!/contracts/z_mocks",
-    "/build/contracts/**/*.json",
+    "/artifacts/**/*.json",
     "/test-utils/**/*.ts",
     "/types/**/*.ts"
   ],
@@ -17,6 +17,7 @@
     "deploy:kovan": "yarn hardhat deploy --network kovan --reset -tags migration",
     "deploy:rskDev": "yarn hardhat deploy --network rskDev --reset --tags migration",
     "deploy:rskTestnet": "yarn hardhat deploy --network rskTestnet --reset --tags migration",
+    "deploy:rskMainnet": "yarn hardhat deploy --network rskMainnet --reset --tags migration",
     "deploy-governance": "yarn hardhat deploy --network development --reset --tags governance",
     "deploy-governance:ropsten": "yarn hardhat deploy --network ropsten --reset --tags governance",
     "deploy-governance:kovan": "yarn hardhat deploy --network kovan --reset --tags governance",
@@ -26,7 +27,7 @@
     "lint": "yarn run lint-ts; yarn run lint-sol",
     "lint-ts": "yarn eslint ./test --ext .ts,.js --fix --quiet",
     "lint-sol": "solhint contracts/{*,**/*,**/**/*,**/**/**/*,**/**/**/**/*}.sol",
-    "coverage": "node --max_old_space_size=6144 node_modules/.bin/hardhat coverage --temp 'build/contracts' --testfiles 'test/[^e2e]*/*.ts' --show-stack-traces",
+    "coverage": "node --max_old_space_size=6144 node_modules/.bin/hardhat coverage --temp 'artifacts' --testfiles 'test/[^e2e]*/*.ts' --show-stack-traces",
     "test": "node --max_old_space_size=4096 node_modules/.bin/hardhat test;",
     "test-file": "yarn hardhat test",
     "test:fork": "yarn run compile; yarn hardhat test --network fork;",
