--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "/types/**/*.ts"
   ],
   "scripts": {
+    "postinstall": "yarn run patch-package",
     "deploy": "yarn hardhat deploy --network development --reset --tags migration",
     "deploy:rinkeby": "yarn hardhat deploy --network rinkeby --reset --tags migration",
     "deploy:ropsten": "yarn hardhat deploy --network ropsten --reset -tags migration",
