--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
     "humanize-duration": "^3.21.0",
     "mocha": "^10.1.0",
     "parse-duration": "^0.1.2",
+    "patch-package": "^6.5.1",
     "prettier": "^2.8.0",
     "prettier-plugin-solidity": "^1.0.0",
     "solc": "^0.8.17",
