switch rpc node mainnet -> mainnet4 when forking

--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "flatten": "sol-merger \"./contracts/[^fish]**/*.sol\" ./_flat",
     "prepublishOnly": "yarn run compile",
     "docgen": "yarn hardhat compile --force && yarn run hardhat docgen",
-    "fork:rsk-mainnet": "hardhat node --fork https://mainnet.sovryn.app/rpc --no-deploy",
+    "fork:rsk-mainnet": "hardhat node --fork https://mainnet4.sovryn.app/rpc --no-deploy",
     "fork:rsk-testnet": "hardhat node --fork https://testnet.sovryn.app/rpc --no-deploy"
   },
   "repository": {
