package.json updates

--- a/package.json
+++ b/package.json
@@ -42,12 +42,12 @@
         "flatten": "sol-merger \"./contracts/[^fish]**/*.sol\" ./_flat",
         "prepublishOnly": "yarn run compile",
         "docgen": "yarn hardhat compile --force && yarn run hardhat docgen",
-        "fork:rsk-mainnet": "hardhat node --fork https://mainnet4.sovryn.app/rpc --no-deploy",
+        "fork:rsk-mainnet": "hardhat node --fork https://mainnet-dev.sovryn.app/rpc --no-deploy",
         "fork:rsk-testnet": "hardhat node --fork https://testnet.sovryn.app/rpc --no-deploy"
     },
     "repository": {
         "type": "git",
-        "url": "git+https://github.com/mstable/mstable-contracts.git"
+        "url": "git+https://github.com/DistributedCollective/mynt/tree/development.git"
     },
     "devDependencies": {
         "@defi-wonderland/smock": "^2.3.4",
