--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,32 +2,23 @@
     "compilerOptions": {
         "target": "es2020",
         "module": "commonjs",
-        "allowJs": true,
-        "strict": true,
-        "noImplicitAny": false,
         "esModuleInterop": true,
-        "outDir": "dist",
         "resolveJsonModule": true,
+        "forceConsistentCasingInFileNames": true,
+        "strict": true,
+        "skipLibCheck": true,
+        "outDir": "dist",
         "sourceMap": true,
-        "declaration": true,
+        "noImplicitAny": false,
+        "lib": ["dom", "es2015", "es2016", "es2017"],
+        "baseUrl": ".",
+        "rootDir": ".",
         "paths": {
             "@utils/*": ["test-utils/*"]
         },
-        "baseUrl": ".",
-        "rootDir": ".",
         "allowJs": true,
         "typeRoots": ["node_modules/@0x/typescript-typings/types", "node_modules/@types"]
     },
-    "include": [
-        "./scripts/**/*.js",
-        "./scripts/**/*.ts",
-        "./tests",
-        "./tasks",
-        "./types/generated",
-        "./deployment/deploy",
-        "./.eslintrc.js",
-        "./deployment/helpers",
-        "./hardhat/**/*.[ts|js]"
-    ],
+    "include": ["./tasks/**/*.ts", ".eslintrc.js"],
     "files": ["./hardhat.config.ts"]
 }
