--- a/package.json
+++ b/package.json
@@ -35,8 +35,8 @@
         "test-file": "yarn hardhat test",
         "test:fork": "yarn run compile; yarn hardhat test --network fork;",
         "compile": "yarn hardhat compile --force",
-        "init": "yarn install && TS_NODE_TRANSPILE_ONLY=1 yarn hardhat compile --force",
-        "prepare": "TS_NODE_TRANSPILE_ONLY=1 yarn hardhat compile --force && tsc",
+        "init": "yarn install && set TS_NODE_TRANSPILE_ONLY=1 && yarn hardhat compile --force",
+        "prepare": "set TS_NODE_TRANSPILE_ONLY=1 && yarn hardhat compile --force && tsc",
         "contract-sizes": "yarn hardhat size-contracts",
         "prettify": "prettier --write test/**/*.ts types/generated/*.ts types/**/*.ts contracts/**/*.sol",
         "prettier-check": "prettier --check .",
