--- a/package.json
+++ b/package.json
@@ -106,6 +106,7 @@
         "prettier": "^2.8.0",
         "prettier-plugin-solidity": "^1.0.0",
         "solc": "^0.8.17",
+        "sovrynsmartcontracts": "git+https://github.com/DistributedCollective/Sovryn-smart-contracts.git",
         "typechain": "^8.1.1",
         "types-ethereumjs-util": "^0.0.8",
         "typescript": "^4.9.3",
