set gh actions 'environment: production'

--- a/.github/workflows/lint-ts.yaml
+++ b/.github/workflows/lint-ts.yaml
@@ -3,6 +3,7 @@ name: Lint Typescript
 jobs:
   build:
     runs-on: ubuntu-latest
+    environment: production
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
