--- a/.github/workflows/lint-sol.yaml
+++ b/.github/workflows/lint-sol.yaml
@@ -19,9 +19,5 @@ jobs:
           key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
           restore-keys: |
             ${{ runner.os }}-yarn-
-      - name: Yarn run init with NODE_ENV=production
-        env:
-          NODE_ENV: production
-        run: yarn run init
-
+      - run: yarn run init
       - run: yarn lint-sol
