--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -20,9 +20,6 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-yarn-
 
-      - name: Yarn run init with NODE_ENV=production
-        env:
-          NODE_ENV: production
-        run: yarn run init
+      - run: yarn run init
       - run: yarn compile
       - run: yarn test
