--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
         "deploy-fish-token": "yarn hardhat deploy --network development --reset --tags fishToken",
         "deploy-meta-asset-token": "yarn hardhat deploy --network development --reset --tags metaAssetToken",
         "lint": "yarn run lint-ts; yarn run lint-sol",
-        "lint-ts": "yarn eslint ./test --ext .ts,.js --fix --quiet",
+        "lint-ts": "yarn eslint . --ext .ts,.js --fix --quiet",
         "lint-sol": "solhint contracts/{*,**/*,**/**/*,**/**/**/*,**/**/**/**/*}.sol",
         "coverage": "node --max_old_space_size=6144 node_modules/.bin/hardhat coverage --temp 'artifacts' --testfiles 'test/[^e2e]*/*.ts' --show-stack-traces",
         "test": "node --max_old_space_size=4096 node_modules/.bin/hardhat test;",
@@ -105,6 +105,7 @@
         "prettier": "^2.8.0",
         "prettier-plugin-solidity": "^1.0.0",
         "solc": "^0.8.17",
+        "solhint-plugin-prettier": "^0.0.5",
         "sovrynsmartcontracts": "git+https://github.com/DistributedCollective/Sovryn-smart-contracts.git",
         "typechain": "^8.1.1",
         "types-ethereumjs-util": "^0.0.8",
