--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "/contracts/**/*.sol",
         "!/contracts/z_mocks",
         "/artifacts/**/*.json",
+        "/scripts",
         "/test-utils/**/*.ts",
         "/types/**/*.ts"
     ],
