--- a/.prettierrc
+++ b/.prettierrc
@@ -1,13 +1,7 @@
 {
   "overrides": [
     {
-      "files": [
-        "*.sol",
-        "*.js",
-        "*.test.js",
-        "*.json",
-        "*.test.ts"
-      ],
+      "files": ["*.sol", "*.js", "*.test.js", "*.json", "*.test.ts"],
       "options": {
         "printWidth": 99,
         "tabWidth": 4,
