--- a/package.json
+++ b/package.json
@@ -38,10 +38,10 @@
         "init": "yarn install && set TS_NODE_TRANSPILE_ONLY=1 && yarn hardhat compile --force",
         "prepare": "yarn patch-package && rm -rf ./dist/ && set TS_NODE_TRANSPILE_ONLY=1 && yarn hardhat compile --force && tsc",
         "contract-sizes": "yarn hardhat size-contracts",
-        "prettify-sol": "prettier --write contracts/{*,**/*,**/**/*,**/**/**/*,**/**/**/**/*}.sol || echo 'Warning: No files matching the pattern were found'",
+        "prettify-sol": "prettier --write contracts/{*,**/*,**/**/*,**/**/**/*,**/**/**/**/*}.sol 2>&1 | grep -v 'No files matching the pattern were found'",
         "prettify": "prettier --write test/**/*.ts types/generated/*.ts types/**/*.ts contracts/**/*.sol",
         "prettier-check": "prettier --check .",
-        "prettier-check-sol": "prettier --check contracts/{*,**/*,**/**/*,**/**/**/*,**/**/**/**/*}.sol || echo 'Warning: No files matching the pattern were found'",
+        "prettier-check-sol": "prettier --check contracts/{*,**/*,**/**/*,**/**/**/*,**/**/**/**/*}.sol 2>&1 | grep -v 'No files matching the pattern were found'",
         "flatten": "sol-merger \"./contracts/[^fish]**/*.sol\" ./_flat",
         "prepublishOnly": "yarn run compile",
         "docgen": "yarn hardhat compile --force && yarn run hardhat docgen",
