--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
         "init": "yarn install && set TS_NODE_TRANSPILE_ONLY=1 && yarn hardhat compile --force",
         "prepare": "yarn patch-package && rm -rf ./dist/ && set TS_NODE_TRANSPILE_ONLY=1 && yarn hardhat compile --force && tsc",
         "contract-sizes": "yarn hardhat size-contracts",
-        "prettify": "prettier --write test/**/*.ts types/generated/*.ts types/**/*.ts contracts/**/*.sol",
+        "prettify": "prettier --write tests/**/*.ts types/generated/*.ts types/**/*.ts contracts/**/*.sol",
         "prettier-check": "prettier --check .",
         "flatten": "sol-merger \"./contracts/[^fish]**/*.sol\" ./_flat",
         "prepublishOnly": "yarn run compile",
